VERSION 0.33 (2018-09-??)
  * installation of RSuite fixed to use not only package available on CRAN:
    it considers also user provided package and WLOG S3 repository.
  * `docker exec` fixed to properly handle passed command.
  * -h option added to main script as shortcut for help.

VERSION 0.32 (2018-08-15)
  * Handling of errors in running docker commands fixed.
  * `docker update` command added which updates all rsuite containers
     to newer versions.
  * `docker build` caches project environment. It speeds up zip building
     process a lot as dependencies from cache need not compilation.
  * `tmpl get` renamed to `tmpl list`
  * `tmpl start` command added

VERSION 0.31 (2018-07-26)
  * Adapted to new version of RSuite.

VERSION 0.30 (2018-07-06)
  * Fixes related to MacOS support (realpath behaves differently)
  * 'update' command for MacOS works properly: it will ask for admin
	password if not running as administrator.

VERSION 0.29 (2018-06-24)
  * `proj lock` and `proj unlock` subcommands added.
  * `tmpl` subcommand added.

VERSION 0.28 (2018-06-01)
  * --no-vignettes added to `proj build`
  * --vanilla_sups and --no-built-check added to `proj depsinst`

VERSION 0.27 (2018-05-29)
  * just adopted for new version of R Suite

VERSION 0.26 (2018-05-23)
  * support for vignettes in skip-build-step option for 'pkgzip github' and
    'repo addgithub'

VERSION 0.25 (2018-04-23)
  * install command adapted to install RSuiteRStudio add-in.
  * main windows script adapted to detect non global R installation.
  * docker command has new sub-commands to support development process:
     run, list, stop, exec, build

VERSION 0.24 (2018-04-18)
  * docker command has new parameter -i (--image) which makes it possible
     to build solution on specific(non default) image.
  * On Windows path to tar is removed before any R Suite script is called as
     it breaks any built of package.

VERSION 0.23 (2018-03-09)