@@ -240,6 +240,48 @@ sub_commands <- list(
       RSuite::repo_mng_stop(ra_mng)
     }
   ),
+  addbioc = list(
+    help = "Upload package build from BioConductor into repository.",
+    options = c(
+      make_option(c("-r", "--repo"), dest = "repo",
+                  help = "Repository to upload from in form [username:password@][release/]repo[#revision]."),
+      make_option(c("-b", "--binary"), dest = "binary", type="logical", default=(.Platform$pkgType != "source"),
+                  help="Build and upload binary package (default: %default)"),
+      make_option(c("--rver"), dest = "rver", default=NULL,
+                  help = paste("R version to build and upload package for. If NULL current R version will",
+                               " be assumed. (default: %default)",
+                               sep = "\n\t\t")),
+      make_option(c("--skip-build-steps"), dest = "skip_build_steps", default=as.character(NULL),
+                  help=paste("Comma separated list of steps to skip while building the package.",
+                             "Following values are accepted:",
+                             "\t specs - not process specifics",
+                             "\t docs  - do not build documentation with roxygen",
+                             "\t imps  - do not perform imports validation",
+                             "\t tests - do not run package tests",
+                             "\t rcpp_attribs - do not run Rcpp attributes compilation on the package",
+                             "\t vignettes - do not run vignettes building",
+                             "(default: %default)",
+                             sep = "\n\t\t")),
+      make_option(c("--keep-sources"), dest = "keep_sources", action="store_true", default=FALSE,
+                  help="If passed will not remove temporary project used to build the package (default: %default)"),
+      common_options
+    ),
+    run = function(opts) {
+      if (is.null(opts$repo)) {
+        stop("--repo option is required")
+      }
+
+      pkg_type <- get_pkg_type(opts$binary)
+      ra_mng <- start_management(opts, rver = opts$rver, types = pkg_type)
+
+      RSuite::repo_upload_bioc_package(ra_mng, repo = opts$repo,
+                                       pkg_type = pkg_type,
+                                       with_deps = FALSE,
+                                       skip_build_steps = unlist(strsplit(opts$skip_build_steps, ",")),
+                                       keep_sources = opts$keep_sources)
+      RSuite::repo_mng_stop(ra_mng)
+    }
+  ),
   list = list(
     help = "Retrieve list of packages available in repository.",
     options = c(
