@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+export(pkgzip_build_bioc_package)
 export(pkgzip_build_ext_packages)
 export(pkgzip_build_github_package)
 export(pkgzip_build_package_files)
@@ -38,6 +39,7 @@ export(repo_mng_list)
 export(repo_mng_remove)
 export(repo_mng_start)
 export(repo_mng_stop)
+export(repo_upload_bioc_package)
 export(repo_upload_ext_packages)
 export(repo_upload_github_package)
 export(repo_upload_package_files)
