@@ -3,6 +3,8 @@ VERSION 0.33 (2018-09-??)
     it considers also user provided package and WLOG S3 repository.
   * `docker exec` fixed to properly handle passed command.
   * -h option added to main script as shortcut for help.
+  * `repo addbioc` and `pkgzip bioc` subcommands added to handle source
+    packages from BioConductor.
 
 VERSION 0.32 (2018-08-15)
   * Handling of errors in running docker commands fixed.
